fix(frontend): decrease font-size on mobile bb-289

--- a/apps/frontend/src/pages/onboarding/styles.module.css
+++ b/apps/frontend/src/pages/onboarding/styles.module.css
@@ -77,4 +77,9 @@
 	.answers {
 		width: 100%;
 	}
+
+	.question {
+		font-size: 24px;
+		line-height: 26px;
+	}
 }
